Add photos of animals
Co-authored-by: Jase Seeley <jcseeley31590@yahoo.com>
Co-authored-by: Michael Shamrell <michaelshamrell2001@gmail.com>

--- a/index.html
+++ b/index.html
@@ -10,36 +10,20 @@
 <body>
   <div class="Flubber">
     <h1>Flubber</h1>
-    
-    <p>Flubber is a very sweet animal. Be cautious becuase he can break out of just about anything.</p>
+    <img src="image/dragon.jpg" alt="photo of dragon">
+    <p>Flubber is a very sweet animal. Be cautious becuase he can break out anything.</p>
   </div>
   
   <div class="Robin-Williams">
-    <h2>Robin Williams</h2>
-
+    <h1>Robin Williams</h1>
+    <img src="image/unicorn.jpg" alt="photo of a unicorn">
     <p>Robin Williams is a funny guy who loves to sleep all day.</p>
   </div>
   
   <div class="Peter-Pan">
-    <h3>Peter Pan</h3>
-    
+    <h1>Peter Pan</h1>
+    <img src="image/lobster.jpg" alt="Photo of lobster ona leash">
     <p>Peter is an adventurous guy who loves to take off so make sure to keep him on a leash!</p>
   </div>  
-
-
-
-
-
-    </il>
-
-
-  </ul>
-
-
-</body>
-
-</head>
-<body>
-  
 </body>
 </html>
