BUGFIX: stuck on columns not formatting.
Co-authored-by: Jase Seeley <jcseeley31590@yahoo.com>
Co-authored-by: Michael Shamrell <michaelshamrell2001@gmail.com>

--- a/index.html
+++ b/index.html
@@ -4,26 +4,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="css.styles.cc" rel="stylesheet" type="text/css" media="all">
+  <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
   <title>Animal Shelter for the Brave</title>
 </head>
 <body>
-  <div class="Flubber">
+  <div class="Column">
     <h1>Flubber</h1>
-    <img src="image/dragon.jpg" alt="photo of dragon">
-    <p>Flubber is a very sweet animal. Be cautious becuase he can break out anything.</p>
+    <img class="image" src="image/dragon.jpg" alt="photo of dragon">
+    <p>Flubber is a very sweet animal. Be cautious because he can break out anything.</p>
   </div>
   
-  <div class="Robin-Williams">
+  
+  <div class="Column">
     <h1>Robin Williams</h1>
-    <img src="image/unicorn.jpg" alt="photo of a unicorn">
+    <img class="image" src="image/unicorn.jpg" alt="photo of a unicorn">
     <p>Robin Williams is a funny guy who loves to sleep all day.</p>
   </div>
   
-  <div class="Peter-Pan">
+  
+  <div class="column">
     <h1>Peter Pan</h1>
-    <img src="image/lobster.jpg" alt="Photo of lobster ona leash">
+    <img class="image" src="image/lobster.jpg" alt="Photo of lobster on a leash">
     <p>Peter is an adventurous guy who loves to take off so make sure to keep him on a leash!</p>
   </div>  
+  
 </body>
 </html>
