--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
   <title>Animal Shelter for the Brave</title>
 </head>
 <body>
-  <div class="Column">
+  <div class="column1">
     <h1>Flubber</h1>
-    <img class="image" src="image/dragon.jpg" alt="photo of dragon">
-    <p>Flubber is a very sweet animal. Be cautious because he can break out anything.</p>
+      <img class="image" src="image/dragon.jpg" alt="photo of dragon">
+      <p>Flubber is a very sweet animal. Be cautious because he can break out anything.</p>
   </div>
   
   
-  <div class="Column">
+  <div class="column2">
     <h1>Robin Williams</h1>
-    <img class="image" src="image/unicorn.jpg" alt="photo of a unicorn">
-    <p>Robin Williams is a funny guy who loves to sleep all day.</p>
+      <img class="image" src="image/unicorn.jpg" alt="photo of a unicorn">
+      <p>Robin Williams is a funny guy who loves to sleep all day.</p>
   </div>
   
   
-  <div class="column">
+  <div class="column3">
     <h1>Peter Pan</h1>
-    <img class="image" src="image/lobster.jpg" alt="Photo of lobster on a leash">
-    <p>Peter is an adventurous guy who loves to take off so make sure to keep him on a leash!</p>
+      <img class="image" src="image/lobster.jpg" alt="Photo of lobster on a leash">
+      <p>Peter is an adventurous guy who loves to take off so make sure to keep him on a leash!</p>
   </div>  
   
 </body>
